tests/machine/x/rust/string_index.rs
fn main() {
    let s = "mochi";
    println!("{:?}", s[1 as usize]);
}
